--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
     <!-- Footer -->
     <footer class="bg-light text-center text-lg-start mt-5">
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2024 Metadata Manager - Inspired by OpenMetadata
+            © 2025 Metadata Manager - PoL Data management corner
         </div>
     </footer>
 
